--- a/Singlepage.html
+++ b/Singlepage.html
@@ -102,7 +102,44 @@
         </section>
         <section id="contact">
             <h3>Contact Details</h3>
-            <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+            <div class="flipcards">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="img/sona.png" alt="Avatar" style="width:300px;height:200px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <h1>Sona</h1>
+                        <p>The Conversational agent</p>
+                        <p>Fast and reliable</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="img/oliver.png" alt="Avatar" style="width:300px;height:200px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <h1>Oliver</h1>
+                        <p>The Community expert</p>
+                        <p>Email: olivermeeus@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="img/dodoi.png" alt="Avatar" style="width:300px;height:200px;">
+                    </div>
+                    <div class="flip-card-back">
+                        <h1>Dodoi</h1>
+                        <p>Architect & Engineer</p>
+                        <p>Email: dodoiutul1@gmail.com</p>
+                    </div>
+                </div>
+            </div>    
+            </div>
             <p>2660 Antwerpen
                 <br>Salesianenlaan 90
                 <br>
