--- a/Singlepage.html
+++ b/Singlepage.html
@@ -21,7 +21,7 @@
     <section id="home">
         <div class="phone-wrapper">
             <div class="phone">
-                <img src="https://imgur.com/jPZueok">
+                <img src="img/phone12.png">
             </div>
         </div>
         <div class="textonimage">Welcome to Sona!
@@ -67,7 +67,7 @@
             <p>You can make an appointment right now by checking Sona!</p>
         </div>
         <div class="profile">
-            <img src="https://imgur.com/hJDK1fP" alt="guest">
+            <img src="img/phoneblank.png" alt="guest">
         </div>
         <div class="more-info">   
             <p>Sona is ready anytime and will help you in the fastest way possible.</p>
@@ -106,7 +106,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="https://imgur.com/QGeeMBH" alt="Avatar" style="width:300px;height:200px;">
+                        <img src="img/sona.png" alt="Avatar" style="width:300px;height:200px;">
                     </div>
                     <div class="flip-card-back">
                         <h1>Sona</h1>
@@ -118,7 +118,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="https://imgur.com/6kjTCDT" alt="Avatar" style="width:300px;height:200px;">
+                        <img src="img/oliver.png" alt="Avatar" style="width:300px;height:200px;">
                     </div>
                     <div class="flip-card-back">
                         <h1>Oliver</h1>
@@ -130,7 +130,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="https://imgur.com/V38XqHt" alt="Avatar" style="width:300px;height:200px;">
+                        <img src="img/dodoi.png" alt="Avatar" style="width:300px;height:200px;">
                     </div>
                     <div class="flip-card-back">
                         <h1>Dodoi</h1>
