--- a/Singlepage.html
+++ b/Singlepage.html
@@ -123,7 +123,7 @@
                     <div class="flip-card-back">
                         <h1>Oliver</h1>
                         <p>The Community expert</p>
-                        <p>Email: olivermeeus@gmail.com</p>
+                        <p>Email: Oliver@websitename.com</p>
                     </div>
                 </div>
             </div>
@@ -135,7 +135,7 @@
                     <div class="flip-card-back">
                         <h1>Dodoi</h1>
                         <p>Architect & Engineer</p>
-                        <p>Email: dodoiutul1@gmail.com</p>
+                        <p>Email: Dodoi@websitename.com</p>
                     </div>
                 </div>
             </div>    
@@ -149,7 +149,7 @@
             </p>
             <p>
                 Email:
-                <a href="mailto:name@example.com">olivermeeus@gmail.com</a>
+                <a href="mailto:name@example.com">Oliver@websitename.com</a>
             </p>
             <p>Time schedule: Monday - Friday: 9:00 AM to 5:00 PM</p>
             </section>
