--- a/Singlepage.html
+++ b/Singlepage.html
@@ -50,7 +50,7 @@
         <h1>About </h1>
             <h3>Sona</h3>
             <p>Sona is our conversational agent that will help you with your problems.</p>
-            <p>These days communities are fading off really quick.These days communityes are fading off really quick.</p>
+            <p>These days communities are fading off really quick.</p>
             <p>We are aiming for a sustainable community without any issues.</p>
             <p>Sona can also easly find the perfect community for you in no time!</p>
             <p>It's completley free to use and you can download the extension in your browser right now!</p>
