--- a/404.html
+++ b/404.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="bottomlayer">
-        Copyright &copy; Oliver Advices 2020. All rights reserved.
+        Copyright &copy; Save the community 2020. All rights reserved.
         </div>
     </body>
 </html>
