--- a/Singlepage.html
+++ b/Singlepage.html
@@ -5,6 +5,52 @@
         <title>Welcome to Sona!</title>
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+        <div class="news">  
+<!--
+                              /|
+                             / |
+                            |  J
+                            L . L
+                           J a8 J
+                           | 88  L
+                           | 88  |   |\
+                           | Y8  L   ) `.
+                            \ Y J   |  , \
+                            `|  |_  | :: |
+                           _/_    `-' ' /        \    /|_  _ _|_ / _
+                          / _ \   ,--. )          \/\/ | |(_| |_  _>
+                          L    \  |   \
+                          `\a88a  `aa.)
+                           _`88P   `88                  _  _        )
+                      _.,-'   \      |                 | |(/_\/\/  o
+               _   --__       |      |
+             -_ --__-      .-'       \                   
+    -___   --______       /           \          .'      
+     ___----   ---       |             \        (                   
+ -___--- ___---- -       | (O)          |        )                  
+____---__--- --         /`-.       (o) /        .'                  
+ ____----__            ( \/ `,--..__,,'       .'                    
+__a:f-_-              _ \ `./_/_//        _,-'                      
+ _                _,     `-.____/     '--'                          
+               _                                         
+           ,,-'                              
+         ,'                                 
+       ,'                                   
+      /                                                             
+     .'                                                             
+     /                                                              
+     |                                                              
+    / 
+
+
+    ____  _       _ __        __   _   __                          __    
+   / __ \(_)___ _(_) /_____ _/ /  / | / /___  ____ ___  ____ _____/ /____
+  / / / / / __ `/ / __/ __ `/ /  /  |/ / __ \/ __ `__ \/ __ `/ __  / ___/
+ / /_/ / / /_/ / / /_/ /_/ / /  / /|  / /_/ / / / / / / /_/ / /_/ (__  ) 
+/_____/_/\__, /_/\__/\__,_/_/  /_/ |_/\____/_/ /_/ /_/\__,_/\__,_/____/  
+        /____/      
+-->
+</div>
     </head>
     <body>
         <div class="topnav">
