--- a/Singlepage.html
+++ b/Singlepage.html
@@ -97,7 +97,7 @@ __a:f-_-              _ \ `./_/_//        _,-'
             <h3>Sona</h3>
             <p>Sona is our conversational agent that will help you with your problems.</p>
             <p>These days communities are fading off really quick.</p>
-            <p>We are aiming for a sustainable community without any issues.</p>
+            <p>We are aiming for a <strong>sustainable community</strong> without any issues.</p>
             <p>Sona can also easly find the perfect community for you in no time!</p>
             <p>It's completley free to use and you can download the extension in your browser right now!</p>
             <p>You can even use it for your own community, it can be integrated in almost any platform.</p>
