--- a/Singlepage.html
+++ b/Singlepage.html
@@ -96,10 +96,10 @@ __a:f-_-              _ \ `./_/_//        _,-'
         <h1>About </h1>
             <h3>Sona</h3>
             <p>Sona is our conversational agent that will help you with your problems.</p>
-            <p>These days communities are fading off really quick.</p>
+            <p>These days communities are fading off really quick.These days communityes are fading off really quickly.</p>
             <p>We are aiming for a <strong>sustainable community</strong> without any issues.</p>
-            <p>Sona can also easly find the perfect community for you in no time!</p>
-            <p>It's completley free to use and you can download the extension in your browser right now!</p>
+            <p>Sona can also easily find the perfect community for you in no time!</p>
+            <p>It's completely free to use and you can download the extension in your browser right now!</p>
             <p>You can even use it for your own community, it can be integrated in almost any platform.</p>
             <h3>Oliver</h3>
             <p>Oliver is our expert in communities he has saved numerous ones and continue to make them grow and perform showing:</p>
