--- a/Singlepage.html
+++ b/Singlepage.html
@@ -122,6 +122,9 @@ __a:f-_-              _ \ `./_/_//        _,-'
                 Don’t hesitate to call!
                 <a href="#contact" class="button">Contact</a>
             </p>
+            <p>Sona is also available anytime and you can request a demo here!
+                <a href="https://app.botsociety.io/s/5dfb5d2be6f41b2aa2f66658?p=463d055989e198c886866dc02aa80e061150f6cb&desktop=false" class="button">Request Demo</a>
+            </p>
         </section>
         <section id="about">
             <div class="customers">
@@ -158,6 +161,7 @@ __a:f-_-              _ \ `./_/_//        _,-'
                         <h1>Sona</h1>
                         <p>The Conversational agent</p>
                         <p>Fast and reliable</p>
+                        <a href="https://app.botsociety.io/s/5dfb5d2be6f41b2aa2f66658?p=463d055989e198c886866dc02aa80e061150f6cb&desktop=false" class="button">Request Demo</a>
                     </div>
                 </div>
             </div>
