--- a/Singlepage.html
+++ b/Singlepage.html
@@ -75,6 +75,9 @@ __a:f-_-              _ \ `./_/_//        _,-'
             <p><a href="https://app.botsociety.io/s/5dfb5d2be6f41b2aa2f66658?p=463d055989e198c886866dc02aa80e061150f6cb&desktop=false" class="demo">Request Demo</a></p>
         </div>
     </section>
+        <div class="layer">
+            <p></p>
+        </div>
         <section id="services">
         <h2>Services</h2>
             <p>We offer various guidance for your community</p>
@@ -91,6 +94,9 @@ __a:f-_-              _ \ `./_/_//        _,-'
                 <li>Personal advices</li>
             </ul>
         </section>
+        <div class="layer">
+            <p></p>
+        </div>
         <section id="about">    
         <div class="info">
         <h1>About </h1>
@@ -126,6 +132,9 @@ __a:f-_-              _ \ `./_/_//        _,-'
                 <a href="https://app.botsociety.io/s/5dfb5d2be6f41b2aa2f66658?p=463d055989e198c886866dc02aa80e061150f6cb&desktop=false" class="button">Request Demo</a>
             </p>
         </section>
+        <div class="layer">
+            <p></p>
+        </div>
         <section id="about">
             <div class="customers">
                 <h2>Our customers</h2> 
